assembling the form

--- a/src/components/article-params-form/ArticleParamsForm.module.scss
+++ b/src/components/article-params-form/ArticleParamsForm.module.scss
@@ -9,7 +9,7 @@
 }
 
 .container_open {
-	overflow: hidden;
+	overflow-x: hidden;
 	transform: translate(0);
 }
 
@@ -17,6 +17,7 @@
 	display: flex;
 	flex-shrink: 0;
 	flex-direction: column;
+	gap: 50px;
 	box-sizing: border-box;
 	width: 616px;
 	height: auto;
