hover and scroll settings

--- a/src/components/arrow-button/ArrowButton.module.scss
+++ b/src/components/arrow-button/ArrowButton.module.scss
@@ -25,6 +25,10 @@
 	transition: transform 0.5s ease;
 }
 
+.container:hover {
+	background-color: #ffc802;
+}
+
 .arrow_open {
 	transform: rotate(0deg);
 }
